--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -62,12 +62,54 @@
 </div>
 
 <div class="container-fluid container_info">
-    <div class="row overcontainer">
-        <div class="col-md-3">
-            <img class="img-fluid" src="../../../assets/icons/casa-vendida.png" alt="Icono casa vendida">
+    <div class="row overcontainer d-flex align-items-center pt-5">
+        <div class="col-md-3 col-sm-6">
+            <div class="d-flex justify-content-center">
+                <img class="img-fluid" src="../../../assets/icons/casa-vendida.png" alt="Icono casa vendida">
+            </div>
+            <p class="first_p">100+</p>
+            <p>Más de 100 casos de éxito</p>
         </div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
+        <div class="col-md-3 col-sm-6">
+            <div class="d-flex justify-content-center">
+                <img class="img-fluid" src="../../../assets/icons/tierra-europa.png" alt="Icono tierra europa">
+            </div>
+            <p class="first_p">20+</p>
+            <p>Operamos en más de 20 países</p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="d-flex justify-content-center">
+                <img class="img-fluid" src="../../../assets/icons/la-flecha-del-grafico-crece.png"
+                    alt="Icono flecha crece">
+            </div>
+            <p class="first_p">15%</p>
+            <p>Crecimiento sólido y constante</p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="d-flex justify-content-center">
+                <img class="img-fluid" src="../../../assets/icons/departamento.png" alt="Icono departamento">
+            </div>
+            <p class="first_p">10+</p>
+            <p>Partners a nivel internacional</p>
+        </div>
     </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="mt-4 p-5 mx-auto" style="max-width: 840px;">
+            <h3>Hemos venido a cambiar las reglas</h3>
+            <p style="text-align: center;">Trabajamos con partners reconocidos a nivel mundial, con las herramientas más
+                vanguardistas del mercado y
+                con los profesionales mejor formados del sector.</p>
+            <p style="text-align: center;">Nuestra prioridad es y será ofrecerte la máxima comodidad y facilidad para
+                poder invertir en activos que
+                normalmente han sido para inversores de alto capital.</p>
+            <p style="text-align: center;">Ahora las tornas han cambiado para que el acceso sea para todo el mundo.</p>
+        </div>
+        <!-- <p class="effect mx-auto">THE REALTY REVOLUTION IS NOW</p> -->
+    </div>
+</div>
+<div class="container-fluid mt-4 p-5">
+    <app-carousel></app-carousel>
 </div>
