Genero el componente footer y lo integro

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -12,12 +12,11 @@
                 alt="" />
         </div>
         <div class="slide">
-            <img src="https://image.freepik.com/free-vector/colors-curl-logo-template_23-2147536125.jpg" height="100"
-                width="250" alt="" />
+            <img src="https://photos.prnewswire.com/prnfull/20151001/273194LOGO" height="100" width="250" alt="" />
         </div>
         <div class="slide">
-            <img src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg" height="100"
-                width="250" alt="" />
+            <img src="https://quantumcapital.com.mx/blog/wp-content/uploads/2023/07/cropped-image_2023-07-27_183539505.png"
+                height="100" width="250" alt="" />
         </div>
         <div class="slide">
             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
