--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -25,8 +25,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6">
-            <img class="img-fluid" src="https://xrealty.ae/wp-content/uploads/2023/09/Dubai-Real-Estate-Agent.jpg"
-                alt="">
+            <img class="img-fluid gridimage"
+                src="https://xrealty.ae/wp-content/uploads/2023/09/Dubai-Real-Estate-Agent.jpg" alt="">
         </div>
         <div class="col-md-6 d-flex justify-content-center">
             <div class="mt-4 p-5 mx-auto">
@@ -55,8 +55,8 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img class="img-fluid" src="https://www.vidyard.com/media/real-estate-video-marketing-1920x1080-1.jpg"
-                alt="">
+            <img class="img-fluid gridimage"
+                src="https://www.vidyard.com/media/real-estate-video-marketing-1920x1080-1.jpg" alt="">
         </div>
     </div>
 </div>
