--- a/src/app/views/index/index.component.css
+++ b/src/app/views/index/index.component.css
@@ -156,3 +156,7 @@ h3 {
     margin-bottom: 6%;
     border-bottom: 1px solid rgb(20, 161, 240);
 }
+
+.gridimage {
+    width: -webkit-fill-available;
+}
