Acabando algunos detalles del footer y cambiando imagenes del carrusel

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -12,11 +12,16 @@
                 alt="" />
         </div>
         <div class="slide">
-            <img src="https://photos.prnewswire.com/prnfull/20151001/273194LOGO" height="100" width="250" alt="" />
+            <img src="https://media.designrush.com/inspiration_images/134937/conversions/_1511454480_993_jpmorgan-mobile.jpg"
+                height="100" width="250" alt="" />
         </div>
         <div class="slide">
-            <img src="https://quantumcapital.com.mx/blog/wp-content/uploads/2023/07/cropped-image_2023-07-27_183539505.png"
+            <img src="https://capital-riesgo.es/files/media/image/articles/2024/02/original/14168quantum_capital_partners.jpg"
                 height="100" width="250" alt="" />
+        </div>
+        <div class="slide">
+            <img src="https://www.inversionsimple.com/wp-content/uploads/2021/03/binance.jpg" height="100" width="250"
+                alt="" />
         </div>
         <div class="slide">
             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
