Genero el componente card para la vista sales. Añado imagenes y un directorio para ellos Soluciono algunos errores

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -48,7 +48,7 @@
                     <h6 class="text-uppercase fw-bold mb-4">
                         Encuentranos
                     </h6>
-                    <div class="card-social">
+                    <div class="card-social d-flex d-md-block">
                         <a class="socialContainer containerOne" href="#">
                             <svg viewBox="0 0 16 16" class="socialSvg instagramSvg">
                                 <path
