--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -1,1 +1,16 @@
-<p>sales works!</p>
+<div class="container-fluid px-5 py-5">
+    <div class="row gx-5 gy-5">
+        <div class="col-md-4">
+            <!-- FIRST CARD -->
+            <app-card [cardImage]="cardImage1"></app-card>
+        </div>
+        <div class="col-md-4">
+            <!-- SECOND CARD -->
+            <app-card [cardImage]="cardImage2"></app-card>
+        </div>
+        <div class="col-md-4">
+            <!-- THIRD CARD -->
+            <app-card [cardImage]="cardImage3"></app-card>
+        </div>
+    </div>
+</div>
