Genero cardcomponent, salescomponent, sale service y interfaz

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,17 +2,20 @@
 <div class="card">
     <img class="card-img-top" src={{cardImage}} alt="Card_image">
     <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-            card's content.</p>
+        <h5 class="card-title">{{tipoInmueble}}</h5>
+        <p class="card-text">{{descripcion}}</p>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item">{{direccion}}</li>
+        <li class="list-group-item">{{precio}}</li>
+        <li class="list-group-item">{{disponibilidad}}</li>
     </ul>
     <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <button class="learn-more">
+            <span aria-hidden="true" class="circle">
+                <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Más detalles</span>
+        </button>
     </div>
 </div>
