--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,9 @@
-<!-- FIRST CARD -->
 <div class="card">
-    <img class="card-img-top" src={{cardImage}} alt="Card_image">
+
+    <button data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="onButtonClick()">
+        <img class="card-img-top" src={{cardImage}} alt="Card_image">
+    </button>
+
     <div class="card-body">
         <h5 class="card-title">{{tipoInmueble}}</h5>
         <p class="card-text">{{descripcion}}</p>
@@ -8,14 +11,7 @@
     <ul class="list-group list-group-flush">
         <li class="list-group-item">{{direccion}}</li>
         <li class="list-group-item">{{precio}}</li>
-        <li class="list-group-item">{{disponibilidad}}</li>
+        <li [ngClass]="{'disponibilidad': isDisponible, 'no-disponibilidad': !isDisponible}" class="list-group-item">
+            {{disponibilidad}}</li>
     </ul>
-    <div class="card-body">
-        <button class="learn-more">
-            <span aria-hidden="true" class="circle">
-                <span class="icon arrow"></span>
-            </span>
-            <span class="button-text">Más detalles</span>
-        </button>
-    </div>
 </div>
