--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -3,13 +3,16 @@
         @for (property of propertyData; track property) {
         <div class="col-md-4">
             <app-card
-                (showModal)="selectedImageValue=$event.image; selectedDetailedInfoValue=$event.detailedInformation"
-                [cardImage]="'../../../assets/house_img/'+property.imagen" [precio]="property.precio.toString()"
+                (showModal)="selectedImageValue=$event.image; selectedDetailedInfoValue=$event.detailedInformation; titleProperty=$event.title; zonaValue=$event.zona; precioValue=$event.precio; direccionValue=$event.direccion; descripcionValue=$event.descripcion;"
+                [cardImage]="'../../../assets/house_img/'+property.imagen" [precio]="property.precio"
                 [disponibilidad]="property.disponibilidad ? 'SI' : 'NO'" [direccion]="property.direccion"
                 [tipoInmueble]="property.tipo_inmueble" [descripcion]="property.descripcion"
-                [detailedInfo]="property.informacion_detallada" [isDisponible]="property.disponibilidad"></app-card>
+                [detailedInfo]="property.informacion_detallada" [isDisponible]="property.disponibilidad"
+                [zona]="property.zona"></app-card>
         </div>
         }
     </div>
 </div>
-<app-modal [image]="selectedImageValue" [detailedInformation]="selectedDetailedInfoValue"></app-modal>
+<app-modal [propertyTitle]="titleProperty" [image]="selectedImageValue"
+    [detailedInformation]="selectedDetailedInfoValue" [zona]="zonaValue" [direccion]="direccionValue"
+    [precio]="precioValue" [descripcion]="descripcionValue"></app-modal>
