--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -6,3 +6,32 @@ img {
     width: 100%;
     height: 350px;
 }
+
+ul li {
+    list-style-type: none;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+}
+
+strong {
+    font-family: "Open Sans", sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    color: rgb(8, 126, 196)
+}
+
+h1,
+h2 {
+    text-align: center;
+}
+
+.progress {
+    height: 30px;
+    margin-bottom: 15px;
+}
+
+.progress-bar {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+}
