--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -3,7 +3,8 @@
         @for (property of propertyData; track property) {
         <div class="col-md-4">
             <app-card
-                (showModal)="selectedImageValue=$event.image; selectedDetailedInfoValue=$event.detailedInformation; titleProperty=$event.title; zonaValue=$event.zona; precioValue=$event.precio; direccionValue=$event.direccion; descripcionValue=$event.descripcion;"
+                (showModal)="porcentajeInvertidoValue=$event.porcentajeInvertido; capitalAportadoValue=$event.capitalAportado; selectedImageValue=$event.image; selectedDetailedInfoValue=$event.detailedInformation; titleProperty=$event.title; zonaValue=$event.zona; precioValue=$event.precio; direccionValue=$event.direccion; descripcionValue=$event.descripcion;"
+                [porcentajeInvertido]="property.porcentaje_invertido" [capitalAportado]="property.capital_aportado"
                 [cardImage]="'../../../assets/house_img/'+property.imagen" [precio]="property.precio"
                 [disponibilidad]="property.disponibilidad ? 'SI' : 'NO'" [direccion]="property.direccion"
                 [tipoInmueble]="property.tipo_inmueble" [descripcion]="property.descripcion"
@@ -13,6 +14,6 @@
         }
     </div>
 </div>
-<app-modal [propertyTitle]="titleProperty" [image]="selectedImageValue"
-    [detailedInformation]="selectedDetailedInfoValue" [zona]="zonaValue" [direccion]="direccionValue"
-    [precio]="precioValue" [descripcion]="descripcionValue"></app-modal>
+<app-modal [capitalAportado]="capitalAportadoValue" [porcentajeInvertido]="porcentajeInvertidoValue"
+    [propertyTitle]="titleProperty" [image]="selectedImageValue" [detailedInformation]="selectedDetailedInfoValue"
+    [zona]="zonaValue" [direccion]="direccionValue" [precio]="precioValue" [descripcion]="descripcionValue"></app-modal>
