--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -1,10 +1,12 @@
 * {
     font-family: "Open Sans", sans-serif;
+    font-weight: 600;
 }
 
 img {
     width: 100%;
     height: 350px;
+    aspect-ratio: 1.5;
 }
 
 ul li {
@@ -25,7 +27,8 @@ h2 {
     text-align: center;
 }
 
-.progress {
+.progress,
+.progress-stacked {
     height: 30px;
     margin-bottom: 15px;
 }
