Genero componente, minicard y toolbar Genero servicio para poder enviar por post desde toolbar Genero servicio para Exits

--- a/src/app/views/rents/rents.component.html
+++ b/src/app/views/rents/rents.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid px-5 py-5">
+    <div class="container-xl">
+        <app-toolbar (responseData)="handleResponseData($event)" [uri]="uriRents"></app-toolbar>
+    </div>
     <div class="row gx-5 gy-5">
         @for (property of propertyData; track property) {
         <div class="col-md-4">
