Se crea el componente SpinnerComponent para el loadding Se inserta allá donde se hacen peticiones a la api

--- a/src/app/views/exits/exits.component.html
+++ b/src/app/views/exits/exits.component.html
@@ -1,3 +1,5 @@
+<app-spinner [show]="loadding"></app-spinner>
+@if (!loadding) {
 <div class="container-fluid px-5 py-5">
     <div class="row gx-5 gy-5">
         @for (item of exitsData; track item) {
@@ -9,3 +11,4 @@
         }
     </div>
 </div>
+}
