--- a/src/app/views/rents/rents.component.html
+++ b/src/app/views/rents/rents.component.html
@@ -1,3 +1,5 @@
+<app-spinner [show]="loadding"></app-spinner>
+@if (!loadding) {
 <div class="container-fluid px-5 py-5">
     <div class="container-xl">
         <app-toolbar (responseData)="handleResponseData($event)" [uri]="uriRents"></app-toolbar>
@@ -20,3 +22,4 @@
 <app-modal [capitalAportado]="capitalAportadoValue" [porcentajeInvertido]="porcentajeInvertidoValue"
     [propertyTitle]="titleProperty" [image]="selectedImageValue" [detailedInformation]="selectedDetailedInfoValue"
     [zona]="zonaValue" [direccion]="direccionValue" [precio]="precioValue" [descripcion]="descripcionValue"></app-modal>
+}
